Fixed a warning